ontol/ontol-compiler/test-cases/error/map/def_inference_cardinality_mismatch.on
def foo (
    rel* 'a': text
    rel* 'b': text
)
map(
    ('a'?: x), // ERROR cardinality mismatch
    @match foo('a': x)
)
